Closed Bug 211476 Opened 23 years ago Closed 23 years ago

Should not depend on internal region struct

Categories

(Core Graveyard :: GFX: Mac, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

(Keywords: fixed1.4.2)

Attachments

(1 file)

nsRegionMac.cpp currently has a dependency on the internal structure of regions, for nsRegionMac::GetRects(). There's a Carbon API we can use for this that's a lot cleaner and also not prone to break when Apple decides to change the opaque region struct.
Attached patch patchSplinter Review
Use QDRegionToRects() instead of what's there.
Attachment #126945 - Flags: superreview?(sfraser)
Attachment #126945 - Flags: review?(pinkerton)
Comment on attachment 126945 [details] [diff] [review] patch r=pink
Attachment #126945 - Flags: review?(pinkerton) → review+
Attachment #126945 - Flags: superreview?(sfraser) → superreview+
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
File hasn't changed on the 1.4 branch, so backporting to that branch would give an idential similar patch.
Attachment #126945 - Flags: approval1.4.2?
Comment on attachment 126945 [details] [diff] [review] patch a=dveditz,asa for 1.4.2
Attachment #126945 - Flags: approval1.4.2? → approval1.4.2+
Checked in on the 1.4 branch: Checking in nsRegionMac.cpp; /cvsroot/mozilla/gfx/src/mac/nsRegionMac.cpp,v <-- nsRegionMac.cpp new revision: 1.24.20.1; previous revision: 1.24
Keywords: fixed1.4.2
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: