Don't depend on the internal format of native regions (bug 211476).  r=pinkerton, sr=sfraser.